# ONNXRuntime-Integration-with-Ubuntu-20.04-and-CMake

./: README.md
tes_predict/: CMakeLists.txt  main.cpp
